# protouch_backend

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  entrypoint.sh  nginx.conf  pyproject.toml
common/: admin.py  models.py  serializers.py  translation.py  urls.py  views.py
common/migrations/: 0001_initial.py
core/: jazzmin_settings.py  jwt_settings.py  settings.py  urls.py
orders/: admin.py  models.py  serializers.py  urls.py  views.py
products/: admin.py  filters.py  models.py  serializers.py  translation.py  urls.py  views.py
products/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
utils/: base.py  middleware.py  validation.py
